--- a/index.htm
+++ b/index.htm
@@ -5,25 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HTML WIREFRAME </title>
+    <title>Huseyin Gundogdu</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 
 <body>
-    <nav class="header">
-        <ul>
-            <h1>"FIRST and LAST NAME"</h1>
-            <li>"link1"</li>
-            <li>"link2"</li>
-            <li>"link3"</li>
-        </ul>
-    </nav>
+    <header>
+        <div class="logo">
+            <img src="" />
+        </div>
+        <h1>Name</h1>
+        <nav class="navbar">
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Projects</li>
+                <li>Contact</li>
+            </ul>
+        </nav>
+    </header>
     <main role="main">
-        <section>"Headline"</section>
-        <section>"Project"</section>
+        <section class="bodyframe">
+            <h2>"Headline and Title"</h2>
+        </section>
     </main>
     <footer class="footer">
-        <h1>"footer"</h1>
+        <h3>"footer"</h3>
     </footer>
 </body>
 
