media screen added

--- a/index.htm
+++ b/index.htm
@@ -14,8 +14,9 @@
         <div class="logo">
             <img src="" />
         </div>
-        <h1>Name</h1>
+        <h1>"Name"</h1>
         <nav class="navbar">
+            <div class="hamburger">&#9776;</div>
             <ul>
                 <li>Home</li>
                 <li>About</li>
