updated html and css

--- a/index.htm
+++ b/index.htm
@@ -6,19 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Huseyin Gundogdu</title>
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="logo">
-            <img src="" />
-        </div>
-        <h1>"Name"</h1>
+    <header class="topPage">
+        <h1>HUSEYIN GUNDOGDU</h1>
         <nav class="navbar">
-            <div class="hamburger">&#9776;</div>
+            <div class="icon">&#9776;</div>
             <ul>
-                <li>Home</li>
                 <li>About</li>
                 <li>Projects</li>
                 <li>Contact</li>
@@ -27,11 +25,17 @@
     </header>
     <main role="main">
         <section class="bodyframe">
-            <h2>"Headline and Title"</h2>
+            <h2>Front-end Web Developer <br>from Silicon Valley</h2>
         </section>
+        <i class="material-icons">
+            code
+        </i>
+        <div class="logo">
+            <img src="my icon.png" />
+        </div>
     </main>
     <footer class="footer">
-        <h3>"footer"</h3>
+        <h3></h3>
     </footer>
 </body>
 
