meta data added

--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Huseyin Gundogdu</title>
+    <meta name="author" content="John Doe">
+    <meta name="keywords" content="HTML, CSS, JavaScript, JQuery">
+    <meta name="description" content="Portfolio of Huseyin Gundogdu">
     <link rel="stylesheet" type="text/css" href="index.css">
     <link href="https://fonts.googleapis.com/css?family=Luckiest+Guy|Special+Elite&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
