updated image sources

--- a/index.htm
+++ b/index.htm
@@ -41,13 +41,13 @@
     <div class="js-top"></div>
 
     <footer class="footer">
-        <a target="_blank" href="mailto:hgundogdu53@gmail.com"><img src="/Users/hsy-53/projects/gmail-icon updated.png"
+        <a target="_blank" href="mailto:hgundogdu53@gmail.com"><img src="https://github.com/hgundogdu53/myPortfolio-hg/blob/master/gmail-icon%20updated.png"
                 alt="mail-icon" id="mailIcon" /></a>
-        <a target="_blank" href="https://github.com/hgundogdu53"><img src="/Users/hsy-53/projects/github.png"
+        <a target="_blank" href="https://github.com/hgundogdu53"><img src="https://github.com/hgundogdu53/myPortfolio-hg/blob/master/github.png"
                 alt="github-icon" id="githubIcon" /></a>
         <a target="_blank" href="https://www.linkedin.com/in/huseyin-gundogdu-b79143130/"><img
-                src="/Users/hsy-53/projects/linkedin-logo.png" alt="linkedin-icon" id="linkedinIcon" /></a>
-        <a target="_blank" href="https://twitter.com/hgundogdu53"><img src="/Users/hsy-53/projects/twitter.png"
+                src="https://github.com/hgundogdu53/myPortfolio-hg/blob/master/linkedin-logo.png" alt="linkedin-icon" id="linkedinIcon" /></a>
+        <a target="_blank" href="https://twitter.com/hgundogdu53"><img src="https://github.com/hgundogdu53/myPortfolio-hg/blob/master/twitter.png"
                 alt="twitter-icon" id="twitterIcon" /></a>
     </footer>
     <script type="text/javascript" src="script.js"></script>
